# lakelevel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml
custom_components/lakelevel/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/lakelevel/lib/: __init__.py  _vendor.py
custom_components/lakelevel/translations/: en.json
docs/: configuration.md  installation.md  releasing.md  usage.md
scripts/: run
src/lakelevel/: __init__.py  cli.py  siljan.py
src/lakelevel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_client.py  test_parser.py
tests/fixtures/: dalalven_siljan.html  landing.html
